--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
         <span class="d-block d-lg-none">Start Bootstrap</span>
         <span class="d-none d-lg-block">
-          <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpg" alt="">
+          <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/dp1.jpeg" alt="">
         </span>
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -44,7 +44,7 @@
             <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#awards">Achievments</a>
+            <a class="nav-link js-scroll-trigger" href="#awards">Projects</a>
           </li>
         </ul>
       </div>
@@ -230,29 +230,31 @@
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
-              Apertre Project Mentor</li>
+              <a href="https://ramdahnudecoration.vercel.app/">Ramdhanu Decoration</a>
+            </li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
-              <!-- 1<sup>st</sup> -->
-              Techquisitive Hackathon top 12</li>
-              <li>
-                <i class="fa-li fa fa-trophy text-warning"></i>
-                Coming soon.....</li>
-              <li>
+              <a href="https://github.com/Pritanshu69/Amazon_homepage-.gitr">Amazon Clone(front-end)</a>
+            </li>
+            <li>
+              <i class="fa-li fa fa-trophy text-warning"></i>
+              <a href="https://voice-to-text-one.vercel.app/">Voice to Text Converter</a>
+            </li>
+            <li>
+              <i class="fa-li fa fa-trophy text-warning"></i>
+              <a href="https://tranquiltouch.vercel.app/">Medical Clinic front end</a>
+            </li>
           </ul>
         </div>
       </section>
 
     </div>
 
-    <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
-    <!-- Plugin JavaScript -->
     <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
-    <!-- Custom scripts for this template -->
     <script src="js/resume.min.js"></script>
 
   </body>
