--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet">
     <link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
     <link href="css/resume.min.css" rel="stylesheet">
+    <!-- icon -->
+    <link rel="icon" href="img/tabicon.jpeg">
+
   </head>
   <body id="page-top">
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
@@ -87,7 +90,7 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="#">
+              <a href="https://github.com/Pritanshu69">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-github fa-stack-1x fa-inverse"></i>
@@ -226,22 +229,22 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="awards">
         <div class="my-auto">
-          <h2 class="mb-5">Awards &amp; Certifications</h2>
+          <h2 class="mb-5">Projects</h2>
           <ul class="fa-ul mb-0">
             <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
+           <i class="fa-li fa fa-rocket text-warning"></i>
               <a href="https://ramdahnudecoration.vercel.app/">Ramdhanu Decoration</a>
             </li>
             <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
+              <i class="fa-li fa fa-rocket text-warning"></i>
               <a href="https://github.com/Pritanshu69/Amazon_homepage-.gitr">Amazon Clone(front-end)</a>
             </li>
             <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
+              <i class="fa-li fa fa-rocket text-warning"></i>
               <a href="https://voice-to-text-one.vercel.app/">Voice to Text Converter</a>
             </li>
             <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
+              <i class="fa-li fa fa-rocket text-warning"></i>
               <a href="https://tranquiltouch.vercel.app/">Medical Clinic front end</a>
             </li>
           </ul>
