--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
               <i class="devicons devicons-react"></i>
             </li>
             <li class="list-inline-item">
-              <i class="devicons devicons-bootstrap"></i>
+            <i class="devicon-tailwindcss-original"></i>
             </li>
             <li class="list-inline-item">
               <i class="devicon-cplusplus-plain"></i>
@@ -211,10 +211,7 @@
               Cross Browser Testing &amp; Debugging</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Cross Functional Teams</li>
-            <li>
-              <i class="fa-li fa fa-check"></i>
-              Agile Development &amp; Scrum</li>
+              Web &amp; app designing</li>
           </ul>
         </div>
       </section>
