--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <div class="subheading mb-5">Balitikuri Naskarpara Howrah, 711113 · +91-7044704683 ·
             <a href="mailto:name@email.com">samantaprit1924@gmail.com</a>
           </div>
-          <p class="mb-5">I am experienced a full stack developer, a tech-enthusiast and a tech explorer who is eager to explore almost all the fields of tech to be possible.</p>
+          <p class="mb-5">I am a full stack developer, a tech-enthusiast and a tech explorer who is eager to explore almost all the fields of tech to be possible.</p>
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
               <a href="https://www.facebook.com/pritanshu.samanta.1/">
@@ -219,7 +219,7 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
         <div class="my-auto">
           <h2 class="mb-5">Interests</h2>
-          <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skiier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
+          <p>Apart from being a web developer, I enjoy most of my time being outdoors.</p>
           <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technolgy advancements in the front-end web development world.</p>
         </div>
       </section>
