--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
             </li>
             <li>
               <i class="fa-li fa fa-rocket text-warning"></i>
-              <a href="https://github.com/Pritanshu69/Amazon_homepage-.gitr">Amazon Clone(front-end)</a>
+              <a href="https://github.com/Pritanshu69/Amazon_homepage-.git">Amazon Clone(front-end)</a>
             </li>
             <li>
               <i class="fa-li fa fa-rocket text-warning"></i>
