particle js not working duh :(

--- a/index.html
+++ b/index.html
@@ -256,6 +256,8 @@
     <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
     <script src="js/resume.min.js"></script>
+    <script type="text/javascript" src="particles.js-master/particles.js"></script>
+    <script type="text/javascript" src="particles.js-master/demo/js/app.js"></script>
 
   </body>
 
