--- a/index.html
+++ b/index.html
@@ -1,269 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <title>Pritanshu's Portfolio</title>
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:100,200,300,400,500,600,700,800,900" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
-    <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-    <link href="vendor/devicons/css/devicons.min.css" rel="stylesheet">
-    <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet">
-    <link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link href="css/resume.min.css" rel="stylesheet">
-    <!-- icon -->
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="loading.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link rel="icon" href="img/tabicon.jpeg">
-
-  </head>
-  <body id="page-top">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">
-        <span class="d-block d-lg-none">PritAnshu</span>
-        <span class="d-none d-lg-block">
-          <img data-aos="zoom-in-down" class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/dp1.jpeg" alt="#">
-        </span>
-      </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#about">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#education">Education</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#awards">Projects</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-
-    <div class="container-fluid p-0">
-
-      <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
-        <div class="my-auto">
-          <h1 data-aos="fade-right"
-          data-aos-offset="300"
-          data-aos-easing="ease-in-sine" class="mb-0">Pritanshu
-            <span class="text-primary">Samanta</span>
-          </h1>
-          <div class="subheading mb-5">Balitikuri Naskarpara Howrah, 711113 · +91-7044704683 ·
-            <a href="mailto:name@email.com">samantaprit1924@gmail.com</a>
-          </div>
-          <p class="mb-5">I am a full stack developer, a tech-enthusiast and a tech explorer who is eager to explore almost all the fields of tech to be possible.</p>
-          <ul class="list-inline list-social-icons mb-0">
-            <li class="list-inline-item">
-              <a href="https://www.facebook.com/pritanshu.samanta.1/">
-                <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="https://twitter.com/Prit_Lmao#">
-                <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="https://www.linkedin.com/in/pritanshu-samanta-956450260/">
-                <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="https://github.com/Pritanshu69">
-                <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-github fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-          </ul>
-        </div>
-      </section>
-
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
-        <div class="my-auto">
-          <h2 class="mb-5">Experience</h2>
-
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">Frontend Developer</h3>
-              <div class="subheading mb-3">Cloud Native Hooghly</div>
-              <p>Currently I am contributing as a front-end developer at CNH aka cloud native hooghly with is affiliated by CNCF.</p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">December 2023 - Present</span>
-            </div>
-          </div>
-
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">Project Mentor</h3>
-              <div class="subheading mb-3">Resourcio Community</div>
-              <p>I was the project maintainer at the open source event named "Apertre" organized by Resourcio community where I my project was the most contributed project in the event.</p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">December 2023 - February 2024</span>
-            </div>
-          </div>
-      </section>
-
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="education">
-        <div class="my-auto">
-          <h2 class="mb-5">Education</h2>
-
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">Sri Ramkrishna Sikshalaya Howrah</h3>
-              <div class="subheading mb-3">grade 1-12</div>
-              <p>percentage: 85% </p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">january 2010 - june 2022</span>
-            </div>
-          </div>
-
-          <div class="resume-item d-flex flex-column flex-md-row">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">Academy of Technology</h3>
-              <div class="subheading mb-3">Btech in Computer Science and Technology</div>
-              <p>GPA: 6.60+</p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">october 2022 - july 2026</span>
-            </div>
-          </div>
-
-        </div>
-      </section>
-
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="skills">
-        <div class="my-auto">
-          <h2 class="mb-5">Skills</h2>
-
-          <div class="subheading mb-3">Programming Languages &amp; Tools</div>
-          <ul class="list-inline list-icons">
-            <li class="list-inline-item">
-              <i class="devicons devicons-html5"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-css3"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-javascript"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicon-go-original-wordmark"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicon-linux-plain"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-sass"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-react"></i>
-            </li>
-            <li class="list-inline-item">
-            <i class="devicon-tailwindcss-original"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicon-cplusplus-plain"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-python"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicon-figma-plain"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicon-canva-original"></i>
-            </li>
-          </ul>
-
-          <div class="subheading mb-3">Workflow</div>
-          <ul class="fa-ul mb-0">
-            <li>
-              <i class="fa-li fa fa-check"></i>
-              Mobile-First, Responsive Design</li>
-            <li>
-              <i class="fa-li fa fa-check"></i>
-              Cross Browser Testing &amp; Debugging</li>
-            <li>
-              <i class="fa-li fa fa-check"></i>
-              Web &amp; app designing</li>
-          </ul>
-        </div>
-      </section>
-
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
-        <div class="my-auto">
-          <h2 class="mb-5">Interests</h2>
-          <p>Apart from being a web developer, I enjoy most of my time being outdoors.</p>
-          <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technolgy advancements in the front-end web development world.</p>
-        </div>
-      </section>
-
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="awards">
-        <div class="my-auto">
-          <h2 class="mb-5">Projects</h2>
-          <ul class="fa-ul mb-0">
-            <li>
-           <i class="fa-li fa fa-rocket text-warning"></i>
-              <a href="https://ramdahnudecoration.vercel.app/">Ramdhanu Decoration</a>
-            </li>
-            <li>
-              <i class="fa-li fa fa-rocket text-warning"></i>
-              <a href="https://github.com/Pritanshu69/Amazon_homepage-.git">Amazon Clone(front-end)</a>
-            </li>
-            <li>
-              <i class="fa-li fa fa-rocket text-warning"></i>
-              <a href="https://voice-to-text-one.vercel.app/">Voice to Text Converter</a>
-            </li>
-            <li>
-              <i class="fa-li fa fa-rocket text-warning"></i>
-              <a href="https://tranquiltouch.vercel.app/">Medical Clinic front end</a>
-            </li>
-          </ul>
-        </div>
-      </section>
-
+    <title>Pritanshu's Portfolio</title>
+</head>
+<body>
+    <div class="container">
+        <div class="📦"></div>
+        <div class="📦"></div>
+        <div class="📦"></div>
+        <div class="📦"></div>
+        <div class="📦"></div>
     </div>
+</body>
 
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script src="js/resume.min.js"></script>
-    <script type="text/javascript" src="particles.js-master/particles.js"></script>
-    <script type="text/javascript" src="particles.js-master/demo/js/app.js"></script>
-    <script>
-      AOS.init();
-    </script>
-
-  </body>
-
+<script>
+    setTimeout(function() {
+            // Redirect to the main page
+            window.location = "main.html"; // Replace with your main page URL
+        }, 3000);
+</script>
 </html>
