--- a/main.html
+++ b/main.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="css/resume.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/marquee.css">
     <!-- icon -->
     <link rel="icon" href="img/tabicon.jpeg">
 
@@ -103,7 +104,11 @@
           </ul>
         </div>
       </section>
-
+      <div class="marquee">
+        <div class="marquee-content">
+            <span>Hey there👋! It's Pritanshu here🧑‍💻.Scroll Down to know more about me👇</span>
+        </div>
+    </div>
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
         <div class="my-auto">
           <h2 class="mb-5">Experience</h2>
