--- a/main.html
+++ b/main.html
@@ -106,7 +106,7 @@
       </section>
       <div class="marquee">
         <div class="marquee-content">
-            <span>Hey there👋! It's Pritanshu here🧑‍💻.Scroll Down to know more about me👇</span>
+            <span>Hey there👋! It's Pritanshu here🧑‍💻.Scroll Down to know more about me</span>
         </div>
     </div>
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
