--- a/main.html
+++ b/main.html
@@ -113,7 +113,7 @@
         <div class="my-auto">
           <h2 data-aos="fade-down" class="mb-5">Experience</h2>
 
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div data-aos="fade-right" class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Frontend Developer</h3>
               <div class="subheading mb-3">Cloud Native Hooghly</div>
@@ -124,7 +124,7 @@
             </div>
           </div>
 
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div data-aos="fade-right" class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Project Mentor</h3>
               <div class="subheading mb-3">Resourcio Community</div>
@@ -140,7 +140,7 @@
         <div class="my-auto">
           <h2 data-aos="fade-down" class="mb-5">Education</h2>
 
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div data-aos="fade-right" class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Sri Ramkrishna Sikshalaya Howrah</h3>
               <div class="subheading mb-3">grade 1-12</div>
@@ -151,7 +151,7 @@
             </div>
           </div>
 
-          <div class="resume-item d-flex flex-column flex-md-row">
+          <div data-aos="fade-right" class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Academy of Technology</h3>
               <div class="subheading mb-3">Btech in Computer Science and Technology</div>
@@ -169,8 +169,8 @@
         <div class="my-auto">
           <h2 data-aos="fade-down" class="mb-5">Skills</h2>
 
-          <div class="subheading mb-3">Programming Languages &amp; Tools</div>
-          <ul class="list-inline list-icons">
+          <div data-aos="fade-right" class="subheading mb-3">Programming Languages &amp; Tools</div>
+          <ul data-aos="fade-right" class="list-inline list-icons">
             <li class="list-inline-item">
               <i class="devicons devicons-html5"></i>
             </li>
@@ -209,8 +209,8 @@
             </li>
           </ul>
 
-          <div class="subheading mb-3">Workflow</div>
-          <ul class="fa-ul mb-0">
+          <div data-aos="fade-right" class="subheading mb-3">Workflow</div>
+          <ul data-aos="fade-right" class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-check"></i>
               Mobile-First, Responsive Design</li>
@@ -227,15 +227,15 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
         <div class="my-auto">
           <h2 data-aos="fade-down" class="mb-5">Interests</h2>
-          <p>Apart from being a web developer, I enjoy most of my time being outdoors.</p>
-          <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technolgy advancements in the front-end web development world.</p>
+          <p data-aos="fade-right">Apart from being a web developer, I enjoy most of my time being outdoors.</p>
+          <p data-aos="fade-right" class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technolgy advancements in the front-end web development world.</p>
         </div>
       </section>
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="awards">
         <div class="my-auto">
           <h2 data-aos="fade-down" class="mb-5">Projects</h2>
-          <ul class="fa-ul mb-0">
+          <ul data-aos="fade-right" class="fa-ul mb-0">
             <li>
            <i class="fa-li fa fa-rocket text-warning"></i>
               <a href="https://ramdahnudecoration.vercel.app/">Ramdhanu Decoration</a>
