--- a/main.html
+++ b/main.html
@@ -32,7 +32,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav">
+        <ul data-aos="fade-right" class="navbar-nav">
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#about">About</a>
           </li>
@@ -64,12 +64,12 @@
           data-aos-easing="ease-in-sine" class="mb-0">Pritanshu
             <span class="text-primary">Samanta</span>
           </h1>
-          <div class="subheading mb-5">Balitikuri Naskarpara Howrah, 711113 · +91-7044704683 ·
+          <div data-aos="fade-left" class="subheading mb-5">Balitikuri Naskarpara Howrah, 711113 · +91-7044704683 ·
             <a href="mailto:name@email.com">samantaprit1924@gmail.com</a>
           </div>
-          <p class="mb-5">I am a full stack developer, a tech-enthusiast and a tech explorer who is eager to explore almost all the fields of tech to be possible.</p>
+          <p data-aos="fade-left" class="mb-5">I am a full stack developer, a tech-enthusiast and a tech explorer who is eager to explore almost all the fields of tech to be possible.</p>
           <ul class="list-inline list-social-icons mb-0">
-            <li class="list-inline-item">
+            <li data-aos="fade-up-right" class="list-inline-item">
               <a href="https://www.facebook.com/pritanshu.samanta.1/">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
@@ -77,7 +77,7 @@
                 </span>
               </a>
             </li>
-            <li class="list-inline-item">
+            <li data-aos="fade-up-right" class="list-inline-item">
               <a href="https://twitter.com/Prit_Lmao#">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
@@ -85,7 +85,7 @@
                 </span>
               </a>
             </li>
-            <li class="list-inline-item">
+            <li  data-aos="fade-up-left" class="list-inline-item">
               <a href="https://www.linkedin.com/in/pritanshu-samanta-956450260/">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
@@ -93,7 +93,7 @@
                 </span>
               </a>
             </li>
-            <li class="list-inline-item">
+            <li  data-aos="fade-up-left" class="list-inline-item">
               <a href="https://github.com/Pritanshu69">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
