project link changed

--- a/main.html
+++ b/main.html
@@ -242,7 +242,7 @@
             </li>
             <li>
               <i class="fa-li fa fa-rocket text-warning"></i>
-              <a href="https://github.com/Pritanshu69/Amazon_homepage-.git">Amazon Clone(front-end)</a>
+              <a href="https://amazon-homepage-dusky.vercel.app/">Amazon Clone(front-end)</a>
             </li>
             <li>
               <i class="fa-li fa fa-rocket text-warning"></i>
