--- a/main.html
+++ b/main.html
@@ -187,7 +187,7 @@
               <i class="devicon-linux-plain"></i>
             </li>
             <li class="list-inline-item">
-              <i class="devicons devicons-sass"></i>
+            <i class="devicon-django-plain-wordmark colored"></i>
             </li>
             <li class="list-inline-item">
               <i class="devicons devicons-react"></i>
