--- a/main.html
+++ b/main.html
@@ -190,6 +190,9 @@
             <i class="devicon-django-plain-wordmark colored"></i>
             </li>
             <li class="list-inline-item">
+              <i class="devicon-firebase-plain"></i>
+            </li>
+            <li class="list-inline-item">
               <i class="devicons devicons-react"></i>
             </li>
             <li class="list-inline-item">
