--- a/main.html
+++ b/main.html
@@ -187,10 +187,7 @@
               <i class="devicon-linux-plain"></i>
             </li>
             <li class="list-inline-item">
-            <i class="devicon-django-plain-wordmark colored"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicon-firebase-plain"></i>
+              <i class="devicon-django-plain"></i>
             </li>
             <li class="list-inline-item">
               <i class="devicons devicons-react"></i>
