--- a/main.html
+++ b/main.html
@@ -190,6 +190,9 @@
               <i class="devicon-django-plain"></i>
             </li>
             <li class="list-inline-item">
+            <i class="devicon-numpy-plain"></i>
+            </li>
+            <li class="list-inline-item">
               <i class="devicons devicons-html5"></i>
             </li>
             <li class="list-inline-item">
@@ -199,7 +202,13 @@
               <i class="devicon-tailwindcss-original"></i>
               </li>
             <li class="list-inline-item">
+            <i class="devicon-mysql-original"></i>
+              </li>
+            <li class="list-inline-item">
               <i class="devicon-linux-plain"></i>
+            </li>
+            <li class="list-inline-item">
+            <i class="devicon-bash-plain"></i>
             </li>
             <li class="list-inline-item">
               <i class="devicon-figma-plain"></i>
