spelling galat tha sahi kar diya lol

--- a/main.html
+++ b/main.html
@@ -117,7 +117,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Frontend Developer</h3>
               <div class="subheading mb-3">Cloud Native Hooghly</div>
-              <p>Currently I am contributing as a front-end developer at CNH aka cloud native hooghly with is affiliated by CNCF.</p>
+              <p>Currently I am contributing as a front-end developer at CNH aka cloud native hooghly which is affiliated by CNCF.</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">December 2023 - Present</span>
